# pairwasm_alignment

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build_commands.md  cspell.json  pairwise_alignment.code-workspace  taplo.toml
.cargo/: config.toml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/pairwasm_alignment/: all.html  enum.InputErrorKind.html  fn.do_protein_alignment.html  index.html  sidebar-items.js  struct.AlignerSession.html  struct.InputError.html
docs/pairwasm_alignment/aligner/: enum.AlignerKind.html  fn.aminoacid_align_builder.html  index.html  sidebar-items.js  trait.Aligner.html
docs/pairwasm_alignment/bioseq/: enum.Aac.html  enum.ErrorKind.html  index.html  sidebar-items.js  struct.Protein.html  struct.SeqError.html  trait.HasSequence.html
docs/pairwasm_alignment/formatter/: constant.GAP_STR.html  constant.MATCH_STR.html  constant.MISMATCH_STR.html  constant.SPACE_STR.html  index.html  sidebar-items.js
docs/pairwasm_alignment/matrix/: enum.ErrorKind.html  index.html  sidebar-items.js  struct.MatError.html  struct.Matrix.html
docs/type.impl/std/: primitive.f32.js
pairwise_alignment/src/: bioseq.rs  lib.rs  matrix.rs  scoring.rs  utils.rs
src/: bioseq.rs  formatter.rs  lib.rs  matrix.rs  scoring.rs  utils.rs
src/aligner/: global_alignment.rs  local_alignment.rs  mod.rs  utils.rs
src/scoring/: mod.rs
src/scoring_schema/: aminacid_data.rs  aminoacid_data.rs  aminoacid_schema.rs  gap_penalty.rs  mod.rs
src/test/: mod.rs  no_web.rs
src/tests/: mod.rs  web.rs
test/: web.rs
(+81 files in other folders)
